objects/Key_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <label>Timing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Key Contact</label>
    <nameField>
        <label>Key Contacts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>